docs(README.md): Completar sección de conclusiones, ya avanzar en manual ténico de desarrolladores e introducción.